re PR fortran/36526 (pointer in pure function)

2008-11-27  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/36526
	* interface.c (check_intents):  Correct error where the actual
	arg was checked for a pointer argument, rather than the formal.

2008-11-27  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/36526
	* gfortran.dg/pure_formal_proc_2.f90: New test.

From-SVN: r142248